# qt.mimicry-clock-screensaver

./: .gitignore  CMakeLists.txt  Makefile  README.md  development.md  main.cpp
assets/: index.html  style.css
cmake/: DebPackageConfig.cmake  DeepinScreensaverConfig.cmake  SparkFindQt5Config.cmake  SparkMacrosConfig.cmake  config.h.in  package-deb.descript
cmake/linux-install/: README.md  linux-install.cmake
resources/assets/: index.html  style.css
src/: main.cpp
